# jird

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
build_scripts/: build.sh  build_in_container.sh
docs/: requirements.txt
docs/source/: cli.rst  conf.py  config.rst  core.rst  csound.rst  csound_tutorial.rst  ear_training_tutorial.rst  file_tutorial.rst  index.rst  installation.rst  interactive_mode_tutorial.rst  lilypond.rst  lilypond_tutorial.rst  midi.rst  midi_tutorial.rst  music.rst  quick_start.rst  reference.rst  resources.rst  scala.rst  spelling_wordlist.txt  surge.rst  synth_tutorial.rst  tutorials.rst  zyn.rst
music/: incline  incline.json  megamorsel  megamorsel.json  music_example  music_example.json  orchestra.orc  puzzle  puzzle.json  respect_the_bear  respect_the_bear.json  right_tool_wrong_job  right_tool_wrong_job.json
src/jird/: __init__.py  __main__.py  cli.py  config.py  constants.py  core.py  csound.py  jird.g  lilypond.py  midi.py  parser.py  process.py  scala.py  surge.py  zyn.py
src/jird/data/: __init__.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_csound.py  test_frequencies.py  test_install.py  test_lilypond.py  test_midi.py  test_process.py  test_property_based.py  test_scala.py  test_surge.py
tests/container_install_test/: run_tests.sh  sconfig.json  test_install.sh  test_multiple.sh  zconfig.json
training/: approach  approach_2  emotion  emotion_2  nineteen_tones  power_and_suspense  power_and_suspense_2  seven_limit  thirty_one_tones  twelve_tones
