[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow",
    "bad_type",
]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"

[tool.ruff]
fix = true
select = ["E", "F", "W", "C90", "I", "D", "N", "S", "BLE", "B", "A", "C4", "T10", "EM",
    "ANN", "ICN", "Q", "RET", "SIM", "TID", "ARG", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF"]
ignore = ["D105", "D203", "D212", "S101", "E501", "B905", "ANN101", "RET507", "PLR2004", "S603", "S607"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["jird"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D103", "ANN"]
"src/jird/cli.py" = ["S311"]
"src/jird/surge.py" = ["E402"]
"src/jird/zyn.py" = ["D101", "S314"]
