[metadata]
name = jird
version = attr: jird.__version__
description = A little language for music in just intonation
long_description = file: README.md
license = GPLv3
author = Naren Ratan
author-email = narenr@fastmail.com
keywords = music
project_urls =
    Source code = https://github.com/narenratan/jird
    Documentation = https://jird.readthedocs.io
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
packages=find:
include_package_data = true
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    jird = jird.cli:main

[options.extras_require]
test =
    pytest
    pytest-cov
    hypothesis
    scipy
doc =
    sphinx_rtd_theme

[flake8]
max-line-length = 100
extend-ignore = E203
